--- a/Hyperparameter_tuning.ipynb
+++ b/Hyperparameter_tuning.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -736,6 +736,33 @@
     "y_pred = random_search.predict(X_test)\n",
     "test_accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Testing Accuracy:\", test_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hyperparameter Tuning Methods Comparison\n",
+    "\n",
+    "| **Approach**               | **Description**                                                                                      | **Pros**                                                                     | **Cons**                                                                      |\n",
+    "|----------------------------|------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------|-------------------------------------------------------------------------------|\n",
+    "| **Grid Search**             | Systematically searches through a predefined set of hyperparameters.                                 | - Exhaustive search, ensures the best combination in the grid. <br> - Simple to implement.  | - Computationally expensive for large hyperparameter spaces. <br> - Time-consuming. |\n",
+    "| **Random Search**           | Randomly samples hyperparameters from a specified distribution.                                      | - More efficient than grid search in large spaces. <br> - Often yields good results with fewer evaluations. | - May miss optimal combinations. <br> - Less deterministic than grid search. |\n",
+    "| **Bayesian Optimization**   | Uses a probabilistic model to guide the search for optimal hyperparameters by balancing exploration and exploitation. | - Efficient, can converge to optimal solutions faster. <br> - Can handle large hyperparameter spaces. | - Complex implementation. <br> - Requires tuning of acquisition functions. |\n",
+    "| **Genetic Algorithms**      | Uses natural selection principles to evolve a population of hyperparameter sets.                     | - Can explore complex and high-dimensional spaces. <br> - Robust to noisy functions. | - Computationally expensive. <br> - May require many iterations to converge. |\n",
+    "| **Hyperband**               | An extension of random search that adapts based on early results, focusing resources on promising configurations. | - Efficiently allocates resources. <br> - Can quickly identify promising regions. | - Limited by available resources. <br> - Can be sensitive to the number of configurations. |\n",
+    "| **Automated Machine Learning (AutoML)** | Fully automated approach that involves selecting and tuning hyperparameters with minimal human intervention. | - Highly efficient and often optimized for the specific problem. <br> - Saves time and effort. | - Limited transparency in the process. <br> - May not always yield the best solution for custom models. |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Key Takeaways\n",
+    "\n",
+    "- **Grid Search** is simple but can be very inefficient for large hyperparameter spaces.\n",
+    "- **Random Search** is more efficient than Grid Search for large spaces but may still miss the optimal parameters.\n",
+    "- **Bayesian Optimization** is more efficient than random search but requires more sophisticated implementation.\n",
+    "- **Genetic Algorithms** are effective in complex spaces but are computationally expensive.\n",
+    "- **Hyperband** adapts the search based on early results and is highly efficient.\n",
+    "- **AutoML** automates the process but sacrifices transparency and flexibility."
    ]
   }
  ],
